Modif structure dossier

--- a/index.html
+++ b/index.html
@@ -25,14 +25,8 @@
     </header>
     <main>
       <div id="banner">
-        <img
-          class="banner-img"
-          src="./ASSETS/images/slideshow/slide1.jpg"
-          alt="Banner Print-it"
-        />
-        <p id="tagLine">
-          Impressions tous formats <span>en boutique et en ligne</span>
-        </p>
+        <img class="banner-img" src="" alt="Banner Print-it" />
+        <p id="tagLine"></p>
         <img
           src="./ASSETS/images/arrow_left.png"
           alt="arrow left"
