--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </ul>
         </div>
         <aside>
-          <img src="./assets/images/colors.jpg" alt="palette multicolore" />
+          <img src="./ASSETS/images/colors.jpg" alt="palette multicolore" />
         </aside>
       </section>
       <section id="products" class="container">
@@ -77,7 +77,7 @@
         </div>
         <aside>
           <img
-            src="./assets/images/yellow-book.jpg"
+            src="./ASSETS/images/yellow-book.jpg"
             alt="Imprimeur avec un livre jaune dans les mains"
           />
         </aside>
@@ -94,7 +94,7 @@
         <div>
           <article>
             <img
-              src="./assets/images/proximity-icon.png"
+              src="./ASSETS/images/proximity-icon.png"
               alt="Icone Proximité"
             />
             <h3>Proximité</h3>
@@ -105,7 +105,7 @@
             </p>
           </article>
           <article>
-            <img src="./assets/images/quality-icon.png" alt="Icone Qualité" />
+            <img src="./ASSETS/images/quality-icon.png" alt="Icone Qualité" />
             <h3>Qualité</h3>
             <p>
               Qu'il s'agisse de copies simples, de brochures, de cartes de
@@ -114,7 +114,7 @@
             </p>
           </article>
           <article>
-            <img src="./assets/images/speedy-icon.png" alt="Rapidité Qualité" />
+            <img src="./ASSETS/images/speedy-icon.png" alt="Rapidité Qualité" />
             <h3>Rapidité</h3>
             <p>
               Vous pouvez compter sur nous pour répondre à vos sollicitations en
@@ -150,7 +150,7 @@
                 35200 Rennes<br />
                 <img
                   class="inline-icon"
-                  src="./assets/images/metro.png"
+                  src="./ASSETS/images/metro.png"
                   alt="metro"
                 />
                 Clémenceau
@@ -159,7 +159,7 @@
           </div>
           <div>
             <img
-              src="./assets/images/magnifying-glass.jpg"
+              src="./ASSETS/images/magnifying-glass.jpg"
               alt="Loupe avec palette bleue"
             />
           </div>
@@ -178,7 +178,7 @@
       <div>
         <p>
           5, rue Yves Noël,35200 Rennes<br />
-          <img src="./assets/images/metro.png" alt="metro" /> Clémenceau
+          <img src="./ASSETS/images/metro.png" alt="metro" /> Clémenceau
         </p>
       </div>
       <div>
@@ -192,11 +192,11 @@
       <div>
         <img
           class="footer-logo"
-          src="./assets/images/logo.png"
+          src="./ASSETS/images/logo.png"
           alt="Print it ! Impressions d'entreprises"
         />
       </div>
     </footer>
-    <script src="./assets/script.js"></script>
+    <script src="./ASSETS/script.js"></script>
   </body>
 </html>
