--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>
         <img
           class="logo"
-          src="./assets/images/logo.png"
+          src="./ASSETS/images/logo.png"
           alt="Print it ! Impressions d'entreprises"
         />
       </h1>
